--- a/live chatbot/live chat.html
+++ b/live chatbot/live chat.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="../assets/css/responsive.css" />
     <!-- inject:Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source Sans Pro:wght@400&display=swap"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nico Moji:wght@400&display=swap"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open Sans:wght@400&display=swap"/>
 
@@ -25,12 +24,7 @@
 <body translate="no">
     <div class="web-sized">
         <main class="computer-science-facts-blog-he-parent" id="main-panel">
-          <img
-            class="computer-science-facts-blog-he-icon"
-            alt=""
-            src="../assets/images/computersciencefactsblogheader-1@2x.png"
-          />
-
+          <img class="computer-science-facts-blog-he-icon" alt="" src="../assets/images/computersciencefactsblogheader-1@2x.png"/>
           <section class="frame-child" id="section"></section>
           <img class="frame-item" alt="" src="../assets/svg/vector-33.svg" />
         </main>
@@ -43,7 +37,7 @@
           <div class="logo">
             <div class="frame">
               <div class="an-ai-query-chatbot">
-                An AI-query chatbot for your college
+                An AI-query chatbot for CCS
               </div>
             </div>
             <div class="frame1">
