--- a/live chatbot/chat-bot.html
+++ b/live chatbot/chat-bot.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="images/favicon.ico">
-        <title>ChatBot | ConnectMe | Chat Application HTML Template</title>
-        <link rel="stylesheet" href="/assets/css/bundle.css?v131">
-        <link rel="stylesheet" href="/assets/css/app.css?v131">
+        <title>ChatBot | Chat Application HTML Template</title>
+        <link rel="stylesheet" href="/assets/css/bundle.css">
+        <link rel="stylesheet" href="/assets/css/app.css">
     </head>
     <body class="tyn-body">
         <div class="tyn-root">
@@ -850,7 +850,7 @@ switch (fruit) {
                 <!-- .tyn-chat-content -->
             </div>
         </div>
-        <script src="/assets/js/bundle.js?v131"></script>
-        <script src="/assets/js/app.js?v131"></script>
+        <script src="/assets/js/bundle.js"></script>
+        <script src="/assets/js/app.js"></script>
     </body>
 </html>
