--- a/live chatbot/template.html
+++ b/live chatbot/template.html
@@ -3,9 +3,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/favicon.ico">
-    <title>Messages | ConnectMe | Chat Application HTML Template</title>
-    <link rel="stylesheet" href="/assets/css/bundle.css?v131">
-    <link rel="stylesheet" href="/assets/css/app.css?v131">
+    <title>Messages | Chat Application HTML Template</title>
+    <link rel="stylesheet" href="/assets/css/bundle.css">
+    <link rel="stylesheet" href="/assets/css/app.css">
 </head>
 
 <body class="tyn-body">
@@ -4717,8 +4717,8 @@
             </div><!-- .modal-content -->
         </div><!-- .modal-dialog -->
     </div><!-- .modal -->
-    <script src="/assets/js/bundle.js?v131"></script>
-    <script src="/assets/js/app.js?v131"></script>
+    <script src="/assets/js/bundle.js"></script>
+    <script src="/assets/js/app.js"></script>
 
 
 </body></html>
