--- a/admin/chat-bot.html
+++ b/admin/chat-bot.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="images/favicon.ico">
-        <title>ChatBot | Chat Application HTML Template</title>
+        <title>ChatBot</title>
         <link rel="stylesheet" href="/assets/css/bundle.css">
         <link rel="stylesheet" href="/assets/css/app.css">
     </head>
